--- a/src/resources/sass/builder/editable/elem.scss
+++ b/src/resources/sass/builder/editable/elem.scss
@@ -27,6 +27,8 @@
     .edit_elem_margin_right{display: block;}
     .edit_elem_margin_bottom{display: block;}
     .edit_elem_margin_left{display: block;}
+
+    .edit_alignment_btn_self{display: flex;}
 }
 .edit_elem_selected:hover{
     .select_edit_elem_title{display:flex;background-color: var(--orange);}
@@ -59,6 +61,7 @@
     justify-content: center;
     cursor: pointer;
     transition-duration: 300ms;
+    z-index: 111;
 }
 .select_edit_elem_title div:nth-child(1){font-size:.75rem;margin-bottom:2px;margin-inline-end: 1px;}
 .select_edit_elem_title div:nth-child(2){font-size:.8rem;}
