--- a/src/resources/sass/builder/tools/editors.scss
+++ b/src/resources/sass/builder/tools/editors.scss
@@ -17,6 +17,7 @@
 @import '../tools/editors/png_icon_selector.scss';//
 @import '../tools/editors/rename.scss';//
 @import '../tools/editors/responsive_selector.scss';//
+@import '../tools/editors/interactions_selector.scss';//
 @import '../tools/editors/select_box.scss';//
 @import '../tools/editors/select_range.scss';//
 @import '../tools/editors/switch_button.scss';
