--- a/src/resources/sass/builder/tools/editors2.scss
+++ b/src/resources/sass/builder/tools/editors2.scss
@@ -1,2 +1,3 @@
 @import '../tools/editors2/edit_padding.scss';//
 @import '../tools/editors2/edit_margin.scss';//
+@import '../tools/editors2/edit_alignment.scss';//
