--- a/src/resources/sass/builder/tools/editors/color_picker.scss
+++ b/src/resources/sass/builder/tools/editors/color_picker.scss
@@ -708,7 +708,7 @@ input.clr-color{
     background-color:transparent;
 }
 ///
-/// 
+///
 .color_picker_editor{
   position: relative;
   width:25px;
@@ -724,7 +724,7 @@ input.clr-color{
   content:'';
   position: absolute;
   inset:0 0 0 0;
-  background-image: 
+  background-image:
   linear-gradient(45deg, rgba(128,128,128,0.5) 25%, transparent 25%, transparent 75%, rgba(128,128,128,0.5) 75%, rgba(128,128,128,0.5)),
   linear-gradient(45deg, rgba(128,128,128,0.5) 25%, transparent 25%, transparent 75%, rgba(128,128,128,0.5) 75%, rgba(128,128,128,0.5));
   background-size: 12.5px 12.5px;
@@ -738,7 +738,8 @@ input.clr-color{
   box-shadow: rgba(0, 0, 0, 0.25) 0px 0px 20px, 0 0 4px rgba(0,0,0,.1);
   position: fixed;
   z-index: 1000;
-  background-color: var(--white-1);
+z-index: 2502;
+background-color: var(--white-1);
   border-radius: 4px;
   padding:10px;
   box-sizing: border-box;
@@ -785,7 +786,7 @@ input.clr-color{
   content:'';
   position: absolute;
   inset:0 0 0 0;
-  background-image: 
+  background-image:
   linear-gradient(45deg, rgba(128,128,128,0.5) 25%, transparent 25%, transparent 75%, rgba(128,128,128,0.5) 75%, rgba(128,128,128,0.5)),
   linear-gradient(45deg, rgba(128,128,128,0.5) 25%, transparent 25%, transparent 75%, rgba(128,128,128,0.5) 75%, rgba(128,128,128,0.5));
   background-size: 12.5px 12.5px;
@@ -797,7 +798,7 @@ input.clr-color{
   inset:0 0 0 0;
   z-index: -1;
   content:'';
-  background-image: 
+  background-image:
   linear-gradient(45deg, rgba(128,128,128,0.5) 25%, transparent 25%, transparent 75%, rgba(128,128,128,0.5) 75%, rgba(128,128,128,0.5)),
   linear-gradient(45deg, rgba(128,128,128,0.5) 25%, transparent 25%, transparent 75%, rgba(128,128,128,0.5) 75%, rgba(128,128,128,0.5));
   background-size: 12.5px 12.5px;
