--- a/src/resources/sass/style/borders.scss
+++ b/src/resources/sass/style/borders.scss
@@ -18,3 +18,6 @@
 .brdrB2{border-bottom:2px solid var(--white-2);}
 .brdrL2{border-left:2px solid var(--white-2);}
 .brdrR2{border-right:2px solid var(--white-2);}
+
+
+.brdrT1_g20{border-top:1px solid var(--green-20)}
